apps/media/jellyfin/service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-svc
  namespace: mediaaaaaa
spec:
  selector:
    app: jellyfin
  type: ClusterIP
  ports:
    - name: jellyfin-webui
      protocol: TCP
      port: 80
      targetPort: jellyfin-webui
