apps/media/jellyfin/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: media
spec:
  rules:
  - host: jellyfin-kube.pupy.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin-svc
            port:
              name: jellyfin-webui
  tls:
    - hosts:
        - '*.pupy.cloud'
      secretName: le-wildcard-pupy-cloud-tls
